// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`galaxyViewDraw value characterization > deep zoom (cam.z=40) past the principle fade span > deep-zoom-values 1`] = `
[
  [
    "createRadialGradient",
    400,
    300,
    0,
    400,
    300,
    480,
  ],
  [
    "stop",
    0,
    "#111",
  ],
  [
    "stop",
    1,
    "#000",
  ],
  [
    "=fillStyle",
    {
      "addColorStop": [Function],
    },
  ],
  [
    "fillRect",
    0,
    0,
    800,
    600,
  ],
  [
    "beginPath",
  ],
  [
    "arc",
    400,
    300,
    1,
    0,
    6.283185,
  ],
  [
    "=fillStyle",
    "rgba(100,150,200,0.29759789203109055)",
  ],
  [
    "fill",
  ],
  [
    "beginPath",
  ],
  [
    "arc",
    200,
    450,
    0.4,
    0,
    6.283185,
  ],
  [
    "=fillStyle",
    "rgba(100,150,200,0.02310244483868301)",
  ],
  [
    "fill",
  ],
  [
    "drawGlow",
    {
      "alpha": 1,
      "r": 403.941799,
      "x": 400,
      "y": 300,
    },
  ],
  [
    "beginPath",
  ],
  [
    "arc",
    400,
    300,
    53.851648,
    0,
    6.283185,
  ],
  [
    "=strokeStyle",
    "rgba(50,55,80,0.1)",
  ],
  [
    "=lineWidth",
    0.5,
  ],
  [
    "stroke",
  ],
  [
    "beginPath",
  ],
  [
    "moveTo",
    400,
    300,
  ],
  [
    "lineTo",
    450,
    320,
  ],
  [
    "=strokeStyle",
    "rgba(100,150,200,0.04)",
  ],
  [
    "=lineWidth",
    0.8,
  ],
  [
    "stroke",
  ],
  [
    "drawGlow",
    {
      "alpha": 1,
      "r": 48,
      "x": 450,
      "y": 320,
    },
  ],
  [
    "beginPath",
  ],
  [
    "arc",
    400,
    300,
    80.622577,
    0,
    6.283185,
  ],
  [
    "=strokeStyle",
    "rgba(50,55,80,0.1)",
  ],
  [
    "=lineWidth",
    0.5,
  ],
  [
    "stroke",
  ],
  [
    "beginPath",
  ],
  [
    "moveTo",
    400,
    300,
  ],
  [
    "lineTo",
    470,
    340,
  ],
  [
    "=strokeStyle",
    "rgba(100,150,200,0.04)",
  ],
  [
    "=lineWidth",
    0.8,
  ],
  [
    "stroke",
  ],
  [
    "drawParticles",
    2,
    {
      "alpha": 1,
      "cx": 470,
      "cy": 340,
      "drawScale": 0.6,
      "scale": 2.4,
    },
  ],
  [
    "drawGlow",
    {
      "alpha": 1,
      "r": 48,
      "x": 470,
      "y": 340,
    },
  ],
  [
    "drawGlow",
    {
      "alpha": 0.559127,
      "r": 2.4,
      "x": 382.575119,
      "y": 294.743608,
    },
  ],
  [
    "drawGlow",
    {
      "alpha": 0.559127,
      "r": 2.4,
      "x": 409.545071,
      "y": 304.846165,
    },
  ],
]
`;

exports[`galaxyViewDraw value characterization > galaxy level (cam.z=1): background, constellations, dim star + particles > galaxy-level-values 1`] = `
[
  [
    "createRadialGradient",
    400,
    300,
    0,
    400,
    300,
    480,
  ],
  [
    "stop",
    0,
    "#111",
  ],
  [
    "stop",
    1,
    "#000",
  ],
  [
    "=fillStyle",
    {
      "addColorStop": [Function],
    },
  ],
  [
    "fillRect",
    0,
    0,
    800,
    600,
  ],
  [
    "beginPath",
  ],
  [
    "arc",
    400,
    300,
    1,
    0,
    6.283185,
  ],
  [
    "=fillStyle",
    "rgba(100,150,200,0.29759789203109055)",
  ],
  [
    "fill",
  ],
  [
    "beginPath",
  ],
  [
    "arc",
    200,
    450,
    0.4,
    0,
    6.283185,
  ],
  [
    "=fillStyle",
    "rgba(100,150,200,0.02310244483868301)",
  ],
  [
    "fill",
  ],
  [
    "beginPath",
  ],
  [
    "arc",
    450,
    350,
    90,
    0,
    6.283185,
  ],
  [
    "=strokeStyle",
    "rgba(100,150,200,0.15)",
  ],
  [
    "=lineWidth",
    1,
  ],
  [
    "setLineDash",
    [
      8,
      14,
    ],
  ],
  [
    "stroke",
  ],
  [
    "setLineDash",
    [],
  ],
  [
    "beginPath",
  ],
  [
    "moveTo",
    400,
    300,
  ],
  [
    "lineTo",
    400,
    300,
  ],
  [
    "=strokeStyle",
    "rgba(100,150,200,0.4)",
  ],
  [
    "=lineWidth",
    0.8,
  ],
  [
    "setLineDash",
    [
      3,
      5,
    ],
  ],
  [
    "stroke",
  ],
  [
    "setLineDash",
    [],
  ],
  [
    "=font",
    "600 14px -apple-system,BlinkMacSystemFont,sans-serif",
  ],
  [
    "=textAlign",
    "center",
  ],
  [
    "=fillStyle",
    "rgba(100,150,200,0.55)",
  ],
  [
    "fillText",
    "Constellation A",
    450,
    250,
  ],
  [
    "beginPath",
  ],
  [
    "arc",
    396.435079,
    319.679719,
    3.75,
    0,
    6.283185,
  ],
  [
    "=fillStyle",
    "rgba(100,150,200,0.05311196327097826)",
  ],
  [
    "fill",
  ],
  [
    "beginPath",
  ],
  [
    "arc",
    396.435079,
    319.679719,
    1.5,
    0,
    6.283185,
  ],
  [
    "=fillStyle",
    "rgba(100,150,200,0.8388995408872283)",
  ],
  [
    "fill",
  ],
  [
    "drawGlow",
    {
      "alpha": 1.166667,
      "r": 10.098545,
      "x": 400,
      "y": 300,
    },
  ],
  [
    "=font",
    "600 14px -apple-system,BlinkMacSystemFont,sans-serif",
  ],
  [
    "=textAlign",
    "center",
  ],
  [
    "=fillStyle",
    "rgba(100,150,200,0.7)",
  ],
  [
    "fillText",
    "Dim1",
    400,
    265.901455,
  ],
  [
    "=font",
    "12px -apple-system,BlinkMacSystemFont,sans-serif",
  ],
  [
    "=fillStyle",
    "rgba(100,150,200,0.933333)",
  ],
  [
    "fillText",
    "7.0",
    400,
    334.098545,
  ],
]
`;

exports[`galaxyViewDraw value characterization > galaxy level draws the keyboard focus ring and hit-tests the star under the mouse > galaxy-level-focus-ring-values 1`] = `
[
  [
    "createRadialGradient",
    400,
    300,
    0,
    400,
    300,
    480,
  ],
  [
    "stop",
    0,
    "#111",
  ],
  [
    "stop",
    1,
    "#000",
  ],
  [
    "=fillStyle",
    {
      "addColorStop": [Function],
    },
  ],
  [
    "fillRect",
    0,
    0,
    800,
    600,
  ],
  [
    "beginPath",
  ],
  [
    "arc",
    400,
    300,
    1,
    0,
    6.283185,
  ],
  [
    "=fillStyle",
    "rgba(100,150,200,0.29759789203109055)",
  ],
  [
    "fill",
  ],
  [
    "beginPath",
  ],
  [
    "arc",
    200,
    450,
    0.4,
    0,
    6.283185,
  ],
  [
    "=fillStyle",
    "rgba(100,150,200,0.02310244483868301)",
  ],
  [
    "fill",
  ],
  [
    "beginPath",
  ],
  [
    "arc",
    450,
    350,
    90,
    0,
    6.283185,
  ],
  [
    "=strokeStyle",
    "rgba(100,150,200,0.15)",
  ],
  [
    "=lineWidth",
    1,
  ],
  [
    "setLineDash",
    [
      8,
      14,
    ],
  ],
  [
    "stroke",
  ],
  [
    "setLineDash",
    [],
  ],
  [
    "beginPath",
  ],
  [
    "moveTo",
    400,
    300,
  ],
  [
    "lineTo",
    400,
    300,
  ],
  [
    "=strokeStyle",
    "rgba(100,150,200,0.4)",
  ],
  [
    "=lineWidth",
    0.8,
  ],
  [
    "setLineDash",
    [
      3,
      5,
    ],
  ],
  [
    "stroke",
  ],
  [
    "setLineDash",
    [],
  ],
  [
    "=font",
    "600 14px -apple-system,BlinkMacSystemFont,sans-serif",
  ],
  [
    "=textAlign",
    "center",
  ],
  [
    "=fillStyle",
    "rgba(100,150,200,0.55)",
  ],
  [
    "fillText",
    "Constellation A",
    450,
    250,
  ],
  [
    "beginPath",
  ],
  [
    "arc",
    396.435079,
    319.679719,
    3.75,
    0,
    6.283185,
  ],
  [
    "=fillStyle",
    "rgba(100,150,200,0.05311196327097826)",
  ],
  [
    "fill",
  ],
  [
    "beginPath",
  ],
  [
    "arc",
    396.435079,
    319.679719,
    1.5,
    0,
    6.283185,
  ],
  [
    "=fillStyle",
    "rgba(100,150,200,0.8388995408872283)",
  ],
  [
    "fill",
  ],
  [
    "drawGlow",
    {
      "alpha": 1.166667,
      "r": 10.098545,
      "x": 400,
      "y": 300,
    },
  ],
  [
    "=font",
    "600 14px -apple-system,BlinkMacSystemFont,sans-serif",
  ],
  [
    "=textAlign",
    "center",
  ],
  [
    "=fillStyle",
    "rgba(100,150,200,0.7)",
  ],
  [
    "fillText",
    "Dim1",
    400,
    265.901455,
  ],
  [
    "=font",
    "12px -apple-system,BlinkMacSystemFont,sans-serif",
  ],
  [
    "=fillStyle",
    "rgba(100,150,200,0.933333)",
  ],
  [
    "fillText",
    "7.0",
    400,
    334.098545,
  ],
  [
    "save",
  ],
  [
    "beginPath",
  ],
  [
    "arc",
    400,
    300,
    24.19709,
    0,
    6.283185,
  ],
  [
    "=strokeStyle",
    "rgba(100,150,200,0.9)",
  ],
  [
    "=lineWidth",
    2,
  ],
  [
    "setLineDash",
    [
      5,
      4,
    ],
  ],
  [
    "stroke",
  ],
  [
    "setLineDash",
    [],
  ],
  [
    "restore",
  ],
]
`;

exports[`galaxyViewDraw value characterization > galaxy level with an unfocused cluster dims the constellation and the star > galaxy-level-unfocused-cluster-values 1`] = `
[
  [
    "createRadialGradient",
    400,
    300,
    0,
    400,
    300,
    480,
  ],
  [
    "stop",
    0,
    "#111",
  ],
  [
    "stop",
    1,
    "#000",
  ],
  [
    "=fillStyle",
    {
      "addColorStop": [Function],
    },
  ],
  [
    "fillRect",
    0,
    0,
    800,
    600,
  ],
  [
    "beginPath",
  ],
  [
    "arc",
    400,
    300,
    1,
    0,
    6.283185,
  ],
  [
    "=fillStyle",
    "rgba(100,150,200,0.29759789203109055)",
  ],
  [
    "fill",
  ],
  [
    "beginPath",
  ],
  [
    "arc",
    200,
    450,
    0.4,
    0,
    6.283185,
  ],
  [
    "=fillStyle",
    "rgba(100,150,200,0.02310244483868301)",
  ],
  [
    "fill",
  ],
  [
    "beginPath",
  ],
  [
    "arc",
    450,
    350,
    216,
    0,
    6.283185,
  ],
  [
    "=strokeStyle",
    "rgba(100,150,200,0.013500000000000003)",
  ],
  [
    "=lineWidth",
    1,
  ],
  [
    "setLineDash",
    [
      8,
      14,
    ],
  ],
  [
    "stroke",
  ],
  [
    "setLineDash",
    [],
  ],
  [
    "beginPath",
  ],
  [
    "moveTo",
    400,
    300,
  ],
  [
    "lineTo",
    400,
    300,
  ],
  [
    "=strokeStyle",
    "rgba(100,150,200,0.03600000000000001)",
  ],
  [
    "=lineWidth",
    0.8,
  ],
  [
    "setLineDash",
    [
      3,
      5,
    ],
  ],
  [
    "stroke",
  ],
  [
    "setLineDash",
    [],
  ],
  [
    "=font",
    "600 14px -apple-system,BlinkMacSystemFont,sans-serif",
  ],
  [
    "=textAlign",
    "center",
  ],
  [
    "=fillStyle",
    "rgba(100,150,200,0.049500000000000016)",
  ],
  [
    "fillText",
    "Constellation A",
    450,
    124,
  ],
  [
    "beginPath",
  ],
  [
    "arc",
    391.444189,
    347.231325,
    9,
    0,
    6.283185,
  ],
  [
    "=fillStyle",
    "rgba(100,150,200,0.009560153388776086)",
  ],
  [
    "fill",
  ],
  [
    "beginPath",
  ],
  [
    "arc",
    391.444189,
    347.231325,
    3.6,
    0,
    6.283185,
  ],
  [
    "=fillStyle",
    "rgba(100,150,200,0.1510019173597011)",
  ],
  [
    "fill",
  ],
  [
    "drawGlow",
    {
      "alpha": 0.21,
      "r": 24.236508,
      "x": 400,
      "y": 300,
    },
  ],
  [
    "=font",
    "600 21px -apple-system,BlinkMacSystemFont,sans-serif",
  ],
  [
    "=textAlign",
    "center",
  ],
  [
    "=fillStyle",
    "rgba(100,150,200,0.126)",
  ],
  [
    "fillText",
    "Dim1",
    400,
    239.763492,
  ],
  [
    "=font",
    "18px -apple-system,BlinkMacSystemFont,sans-serif",
  ],
  [
    "=fillStyle",
    "rgba(100,150,200,0.168)",
  ],
  [
    "fillText",
    "7.0",
    400,
    360.236508,
  ],
]
`;

exports[`galaxyViewDraw value characterization > zoomed into a dimension (cam.z=5): principle planets, orbit rings and labels > zoomed-dim-values 1`] = `
[
  [
    "createRadialGradient",
    400,
    300,
    0,
    400,
    300,
    480,
  ],
  [
    "stop",
    0,
    "#111",
  ],
  [
    "stop",
    1,
    "#000",
  ],
  [
    "=fillStyle",
    {
      "addColorStop": [Function],
    },
  ],
  [
    "fillRect",
    0,
    0,
    800,
    600,
  ],
  [
    "beginPath",
  ],
  [
    "arc",
    400,
    300,
    1,
    0,
    6.283185,
  ],
  [
    "=fillStyle",
    "rgba(100,150,200,0.29759789203109055)",
  ],
  [
    "fill",
  ],
  [
    "beginPath",
  ],
  [
    "arc",
    200,
    450,
    0.4,
    0,
    6.283185,
  ],
  [
    "=fillStyle",
    "rgba(100,150,200,0.02310244483868301)",
  ],
  [
    "fill",
  ],
  [
    "drawGlow",
    {
      "alpha": 1,
      "r": 50.492725,
      "x": 400,
      "y": 300,
    },
  ],
  [
    "beginPath",
  ],
  [
    "arc",
    400,
    300,
    53.851648,
    0,
    6.283185,
  ],
  [
    "=strokeStyle",
    "rgba(50,55,80,0.1)",
  ],
  [
    "=lineWidth",
    0.5,
  ],
  [
    "stroke",
  ],
  [
    "beginPath",
  ],
  [
    "moveTo",
    400,
    300,
  ],
  [
    "lineTo",
    450,
    320,
  ],
  [
    "=strokeStyle",
    "rgba(100,150,200,0.04)",
  ],
  [
    "=lineWidth",
    0.8,
  ],
  [
    "stroke",
  ],
  [
    "drawParticles",
    2,
    {
      "alpha": 1,
      "cx": 450,
      "cy": 320,
      "drawScale": 0.48,
      "scale": 0.48,
    },
  ],
  [
    "drawGlow",
    {
      "alpha": 1,
      "r": 6,
      "x": 450,
      "y": 320,
    },
  ],
  [
    "=font",
    "600 14px -apple-system,BlinkMacSystemFont,sans-serif",
  ],
  [
    "=textAlign",
    "center",
  ],
  [
    "=fillStyle",
    "rgba(100,150,200,0.6)",
  ],
  [
    "fillText",
    "P1",
    450,
    304,
  ],
  [
    "=font",
    "12px -apple-system,BlinkMacSystemFont,sans-serif",
  ],
  [
    "=fillStyle",
    "rgba(100,150,200,0.7)",
  ],
  [
    "fillText",
    "7.5",
    450,
    342,
  ],
  [
    "save",
  ],
  [
    "beginPath",
  ],
  [
    "arc",
    450,
    320,
    20,
    0,
    6.283185,
  ],
  [
    "=strokeStyle",
    "rgba(100,150,200,0.9)",
  ],
  [
    "=lineWidth",
    2,
  ],
  [
    "setLineDash",
    [
      5,
      4,
    ],
  ],
  [
    "stroke",
  ],
  [
    "setLineDash",
    [],
  ],
  [
    "restore",
  ],
]
`;

exports[`galaxyViewDraw value characterization > zoomed into a principle (cam.z=15): sibling fade plus the violation orbs > zoomed-principle-values 1`] = `
[
  [
    "createRadialGradient",
    400,
    300,
    0,
    400,
    300,
    480,
  ],
  [
    "stop",
    0,
    "#111",
  ],
  [
    "stop",
    1,
    "#000",
  ],
  [
    "=fillStyle",
    {
      "addColorStop": [Function],
    },
  ],
  [
    "fillRect",
    0,
    0,
    800,
    600,
  ],
  [
    "beginPath",
  ],
  [
    "arc",
    400,
    300,
    1,
    0,
    6.283185,
  ],
  [
    "=fillStyle",
    "rgba(100,150,200,0.29759789203109055)",
  ],
  [
    "fill",
  ],
  [
    "beginPath",
  ],
  [
    "arc",
    200,
    450,
    0.4,
    0,
    6.283185,
  ],
  [
    "=fillStyle",
    "rgba(100,150,200,0.02310244483868301)",
  ],
  [
    "fill",
  ],
  [
    "drawGlow",
    {
      "alpha": 1,
      "r": 151.478175,
      "x": 400,
      "y": 300,
    },
  ],
  [
    "beginPath",
  ],
  [
    "arc",
    400,
    300,
    53.851648,
    0,
    6.283185,
  ],
  [
    "=strokeStyle",
    "rgba(50,55,80,0.1)",
  ],
  [
    "=lineWidth",
    0.5,
  ],
  [
    "stroke",
  ],
  [
    "beginPath",
  ],
  [
    "moveTo",
    400,
    300,
  ],
  [
    "lineTo",
    450,
    320,
  ],
  [
    "=strokeStyle",
    "rgba(100,150,200,0.04)",
  ],
  [
    "=lineWidth",
    0.8,
  ],
  [
    "stroke",
  ],
  [
    "drawParticles",
    2,
    {
      "alpha": 0.85,
      "cx": 450,
      "cy": 320,
      "drawScale": 1.44,
      "scale": 1.44,
    },
  ],
  [
    "drawGlow",
    {
      "alpha": 1,
      "r": 18,
      "x": 450,
      "y": 320,
    },
  ],
  [
    "=font",
    "600 14px -apple-system,BlinkMacSystemFont,sans-serif",
  ],
  [
    "=textAlign",
    "center",
  ],
  [
    "=fillStyle",
    "rgba(100,150,200,0.51)",
  ],
  [
    "fillText",
    "P1",
    450,
    292,
  ],
  [
    "=font",
    "12px -apple-system,BlinkMacSystemFont,sans-serif",
  ],
  [
    "=fillStyle",
    "rgba(100,150,200,0.595)",
  ],
  [
    "fillText",
    "7.5",
    450,
    354,
  ],
  [
    "drawGlow",
    {
      "alpha": 0.083869,
      "r": 0.9,
      "x": 424.715669,
      "y": 310.528853,
    },
  ],
  [
    "drawGlow",
    {
      "alpha": 0.083869,
      "r": 0.9,
      "x": 434.829402,
      "y": 314.317312,
    },
  ],
]
`;
